--- a/css/crow.css
+++ b/css/crow.css
@@ -10,14 +10,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 :root {
   --Moderate-cyan: hsl(176, 50%, 47%);
   --Dark-cyan: hsl(176, 72%, 28%);
@@ -33,9 +26,7 @@ body {
 }
 ::-webkit-scrollbar {
   width: 0;
-
   height: 0;
-
   background-color: transparent;
 }
 .container {
@@ -44,106 +35,18 @@ body {
   justify-content: center;
   flex-direction: column;
 }
-
-.container-sales {
-  background: white;
-  padding: 45px;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  width: 750px;
-}
-.img-close-card {
-  display: flex;
-  position: relative;
-}
-
-.close-card {
-  background-color: transparent;
-  border: none;
-  position: absolute;
-  right: -16px;
-  top: -17px;
-  cursor: pointer;
-}
-.close-card img:hover {
-  animation: rotate 1s infinite;
-}
-
-.close-card.open {
-  display: flex;
-}
-
-.card-buy-monitor {
-  height: fit-content;
-  padding: 28px;
-  gap: 14px;
-  box-shadow: 0px 0px 1px 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  border-radius: 13px;
-}
-.card-buy-monitor div {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 15px;
-}
-
-.radio-input {
-  width: 18px;
-  height: 18px;
-  accent-color: var(--Dark-cyan);
-}
-.card-buy-monitor h3 {
-  font-size: 14px;
-}
-
-.radio-input {
-  width: 18px;
-  height: 18px;
-  accent-color: var(--Dark-cyan);
-}
-input {
-  accent-color: var(--Dark-cyan);
-}
-.sponsorship-card h3 {
-  font-size: 14px;
-}
-
-.sponsorship-card label:hover {
-  cursor: pointer;
-  color: var(--Dark-cyan);
-  font-weight: bold;
-}
-
-label {
-  font-weight: 600;
-}
-label:focus {
-  cursor: pointer;
-  color: var(--Dark-cyan);
-  font-weight: bold;
-}
-.sponsorship-card P {
-  font-size: 15px;
-  padding-left: 28px;
-  line-height: 20px;
-  color: var(--color-Dark-gray);
-  padding-bottom: 22px;
-}
-
 .apagado {
   display: none;
 }
 .encendido {
   display: flex;
 }
+.prueba{
+
+}
 @media screen and (max-width: 750px) {
   header {
-    background-image: url(images/image-hero-mobile.jpg);
+    background-image: url(../images/image-hero-mobile.jpg);
   }
   li {
     margin: 0;
@@ -169,12 +72,14 @@ label:focus {
   #menu-open {
     display: flex;
   }
-  .card-monitor p {
+  /* .card-monitor p {
     font-size: 15px;
-    text-align: center;
     line-height: 20px;
+    padding-bottom: 0;
+  } */
+  .text-card-buy-monitor{
+padding-bottom: 45px;
   }
-
   .card-monitor h1 {
     text-align: center;
   }
@@ -202,7 +107,6 @@ label:focus {
   .content-stick {
     width: 270px;
   }
-
   .stick {
     width: 217px;
   }
@@ -217,7 +121,7 @@ label:focus {
   .card-project {
     height: 307px;
     gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
   }
 
   .card:last-child {
@@ -253,7 +157,6 @@ label:focus {
   }
 
   .sponsorship-card {
-    height: 250px;
     padding: 26px 31px 26px 32px;
   }
 
@@ -261,12 +164,9 @@ label:focus {
     padding: 0;
     text-align: left;
   }
-  .card-buy-monitor {
-    height: 250px;
-  }
 
-  .card-buy-monitor div {
-    display: inline-block;
+  .units-available {
+    position: relative;
   }
 
   .close-card {
@@ -274,22 +174,35 @@ label:focus {
     right: 0;
   }
 
+  .content-value {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .money-validation {
+    display: flex;
+    width: 256px;
+    justify-content: space-between;
+  }
+  .number-of-units {
+    position: absolute;
+    top: 180px;
+  }
   .title-mohogany {
     flex-direction: column;
   }
-
+  
   .content-nav {
     display: flex;
     height: fit-content;
   }
-
+  
   header .menu-button button {
     background: transparent;
     outline: none;
     border: none;
     cursor: pointer;
   }
-
+  
   header nav #menu-close {
     background: transparent;
     border: none;
@@ -323,14 +236,25 @@ label:focus {
     font-weight: 500;
   }
 
-  /* header nav ul li {
-          margin: 15px 0;
-          font-size: 15px;
-        } */
-
   header nav {
     opacity: 0;
     z-index: -2;
     transition: all 0.3 ease-in-out;
   }
+  .content-cards {
+    width: 350px;
+    padding: 43px 38px 0px 38px;
+  }
+
+  .card-project {
+    height: 307px;
+    gap: 20px;
+  }
+
+  .card-project p {
+    font-size: 14px;
+  }
+
 }
+
+
