--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url(images/image-hero-desktop.jpg);
+  background-image: url(../images/image-hero-desktop.jpg);
   height: 400px;
   display: flex;
   width: 100%;
